hero section added

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
+    content="CompilerX is a modern online C Compiler, Converter, and Handbook — all in one place. Write, compile, and run C programs instantly in your browser without installing anything. Enjoy fast performance, code saving, custom input, syntax highlighting, and downloadable outputs. The built-in Converter helps solve common Compiler Design course problems like left recursion elimination, left factoring, and parsing table construction. The included Handbook guides learners step-by-step through C programming and compiler design concepts.">
   <meta name="keywords"
-    content="Tailwind CSS, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
+    content="Tailwind CSS, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup">
   <meta name="author" content="elemis">
   <title>CompilerX</title>
   <!-- google fonts -->
@@ -42,18 +42,16 @@
 </head>
 
 <body class="font-THICCCBOI text-[.85rem]">
-  <!-- Main Div  -->
+  <!-- Main section  -->
   <div class="grow shrink-0">
-
-    <!-- header div  -->
     <header class="relative wrapper  bg-[#262b32] opacity-100 ">
       <nav class="navbar navbar-expand-lg center-nav transparent navbar-dark">
         <div class="container xl:!flex-row lg:!flex-row !flex-nowrap items-center">
           <div class="navbar-brand w-full">
             <a href=''>
-              <img class="logo-dark" src="assets/img/logo-dark.png" srcset="./assets/img/logo-dark@2x.png 2x"
+              <img class="logo-dark" src="assets/img/logo-dark.png" 
                 alt="image">
-              <img class="logo-light" src="assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x"
+              <img class="logo-light" src="assets/img/logo-light.png" 
                 alt="image">
             </a>
           </div>
@@ -66,15 +64,9 @@
             </div>
             <div class="offcanvas-body xl:!ml-auto lg:!ml-auto flex  flex-col !h-full">
               <ul class="navbar-nav">
-                <li class="nav-item dropdown dropdown-mega">
-                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#">Home</a>
-                  <!--/.dropdown-menu -->
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#" data-bs-toggle="dropdown">Compiler</a>
-
-                </li>
-
+                
+                <li class="nav-item dropdown"><a class="nav-link active" href="index.html">Home</a></li>
+                <li class="nav-item dropdown"><a class="nav-link " href="c-compiler.html">Compiler</a></li>
                 <li class="nav-item dropdown">
                   <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#"
                     data-bs-toggle="dropdown">Convert-CD</a>
@@ -131,7 +123,58 @@
       <!-- /.offcanvas -->
     </header>
     <!-- /header -->
+
+
+
+
+
+    <section
+      class="wrapper  bg-[#262b32] opacity-100  angled lower-start relative border-0
+     before:content-[''] before:block before:absolute before:z-0 before:border-y-transparent before:border-[#262b32] before:border-0 before:border-solid before:right-0 after:bottom-[-4rem] after:content-[''] after:block after:absolute after:z-0 after:border-l-[100vw] after:border-r-transparent after:border-b-[4rem] after:border-y-transparent after:border-[#262b32] after:border-0 after:border-solid after:right-0">
+      <div class="container pt-7 xl:pt-12 lg:pt-12 md:pt-12 pb-8">
+        <div class="flex flex-wrap mx-0 !mt-[-50px] items-center">
+          <div class="lg:w-6/12 xl:w-6/12 w-full flex-[0_0_auto] max-w-full px-0 !mt-[50px]" data-cues="slideInDown"
+            data-group="page-title" data-delay="600">
+            <h1 class="!text-[calc(1.375rem_+_1.5vw)] font-bold !leading-[1.15] xl:!text-[2.5rem] !text-white !mb-4">
+              CompilerX
+              focuses on <br><span class="typer !text-[#54a8c7]  whitespace-nowrap" data-delay="100"
+                data-words="C program Compiler,Basic Convert,Hand Book"></span><span class="cursor !text-[#54a8c7] "
+                data-owner="typer"></span></h1>
+            <p class="lead !text-[1.2rem] !leading-[1.5] !text-white !mb-7 md:!pr-32 xl:!pr-0 lg:!pr-0 xxl:!pr-20">Our
+              website offers a simple and efficient C programming compiler, a basic converter for Compiler Design (CD)
+              course, and a handy handbook for quick reference. All resources in one place.</p>
+            <div>
+              <a
+                class="btn btn-lg btn-aqua !text-white !bg-[#54a8c7] border-[#54a8c7] hover:text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] active:!text-[#343f52] active:bg-[#54a8c7] active:border-[#54a8c7] disabled:!text-[#343f52] disabled:bg-[#54a8c7] disabled:border-[#54a8c7] rounded">Get
+                Started</a>
+            </div>
+          </div>
+          <!-- /column -->
+          <div
+            class="lg:w-5/12 xl:w-5/12 w-full flex-[0_0_auto] max-w-full px-0 !mt-[50px] lg:!ml-[8.33333333%] xl:!ml-[8.33333333%] !mb-[-8rem] relative z-[3]"
+            data-cues="slideInDown">
+            <div class="!relative">
+              <a href="assets/media/movie.mp4"
+                class="btn btn-circle btn-aqua !text-white !bg-[#54a8c7] border-[#54a8c7] hover:text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] active:!text-[#343f52] active:bg-[#54a8c7] active:border-[#54a8c7] disabled:!text-[#343f52] disabled:bg-[#54a8c7] disabled:border-[#54a8c7] btn-play ripple !mx-auto !mb-6 !absolute !text-[calc(1.355rem_+_1.26vw)] xl:!text-[2.3rem] !w-[3.5rem] !h-[3.5rem] !inline-flex !items-center !justify-center !leading-none !p-0 !rounded-[100%] before:!bg-[#54a8c7] after:!bg-[#54a8c7] before:content-[''] before:block before:absolute before:opacity-80 before:animate-[ripple-1_2s_infinite_ease-in-out] before:z-[-1] before:rounded-[50%] before:inset-0 after:opacity-60 after:animate-[ripple-2_2s_infinite_ease-in-out] after:content-[''] after:block after:absolute after:z-[-1] after:rounded-[50%] after:inset-0 after:[animation-delay:.5s]"
+                style="top:50%; left: 50%; transform: translate(-50%,-50%); z-index:3;" data-glightbox><i
+                  class="icn-caret-right !ml-[0.15rem] !relative z-[2] before:content-['\e900'] !text-[calc(1.355rem_+_1.26vw)]"></i></a>
+              <figure class="!rounded-[.4rem] !shadow-[0_0.25rem_1.75rem_rgba(30,34,40,0.07)]"><img
+                  class="!rounded-[.4rem]" src="assets/imgg/videoimg.jpg"
+                   alt="image"></figure>
+            </div>
+            <!-- /div -->
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    
+    <!-- /section -->
   </div>
+  <!-- Main section end  -->
+
   <!-- progress wrapper -->
   <div
     class="progress-wrap fixed w-[2.3rem] h-[2.3rem] cursor-pointer block shadow-[inset_0_0_0_0.1rem_rgba(128,130,134,0.25)] z-[1010] opacity-0 invisible translate-y-3 transition-all duration-[0.2s] ease-[linear,margin-right] delay-[0s] rounded-[100%] right-6 bottom-6 motion-reduce:transition-none after:absolute after:content-['\e951'] after:text-center after:leading-[2.3rem] after:text-[1.2rem] after:!text-[#54a8c7] after:h-[2.3rem] after:w-[2.3rem] after:cursor-pointer after:block after:z-[1] after:transition-all after:duration-[0.2s] after:ease-linear after:left-0 after:top-0 motion-reduce:after:transition-none after:font-Unicons">
@@ -144,5 +187,6 @@
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/theme.js"></script>
 </body>
+
 
 </html>
