do and how section added

--- a/index.html
+++ b/index.html
@@ -170,6 +170,184 @@
       </div>
       <!-- /.container -->
     </section>
+
+    <section class="wrapper !bg-[#ffffff]">
+      <div class="container pt-36 xl:pt-[12.5rem] lg:pt-[12.5rem] md:pt-[12.5rem] pb-24 xl:pb-32 lg:pb-32 md:pb-32">
+        <div class="flex flex-wrap mx-[-15px]">
+          <div class="lg:w-8/12 xl:w-7/12 xxl:w-6/12 w-full flex-[0_0_auto] !px-[15px] max-w-full">
+            <h2
+              class="!text-[0.8rem] uppercase inline-flex !leading-[1.35] text-line relative align-top !pl-[1.4rem] !tracking-[0.02rem] before:content-[''] before:absolute before:inline-block before:translate-y-[-60%] before:w-3 before:h-[0.05rem] before:left-0 before:top-2/4 before:bg-[#54a8c7]  !text-[#54a8c7]  !mb-3">
+              What We Do?</h2>
+            <h3 class="!text-[calc(1.315rem_+_0.78vw)] font-bold xl:!text-[1.9rem] !leading-[1.25] !mb-9">The tools we
+              provide are designed to make your coding journey and Compiler Design course easier and more efficient.
+            </h3>
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+        <div
+          class="flex flex-wrap mx-[-15px] xl:mx-[-20px] lg:mx-[-20px] md:mx-[-20px] !mt-[-40px] !mb-[4.5rem] xl:!mb-[8rem] lg:!mb-[8rem] md:!mb-[8rem]">
+          <div
+            class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] !px-[15px] xl:!px-[20px] lg:!px-[20px] md:!px-[20px] !mt-[40px] max-w-full">
+            <div class="icon btn btn-block btn-lg btn-soft-aqua pointer-events-none !mb-6"> <i
+                class="uil uil-wind-moon"></i> </div>
+            <h4 class="!text-[1rem] !leading-[1.45]">Online C Compiler
+            </h4>
+            <p class="!mb-3">Write, compile, and run your C programs instantly in a clean, distraction-free environment
+              — anytime, anywhere.</p>
+            <a href="#" class="more hover !text-[#54a8c7] focus:!text-[#54a8c7] hover:!text-[#54a8c7]">Learn More</a>
+          </div>
+          <!--/column -->
+          <div
+            class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] !px-[15px] xl:!px-[20px] lg:!px-[20px] md:!px-[20px] !mt-[40px] max-w-full">
+            <div class="icon btn btn-block btn-lg btn-soft-aqua pointer-events-none !mb-6"> <i
+                class="uil uil-shield-exclamation before:content-['\ecb3']"></i> </div>
+            <h4 class="!text-[1rem] !leading-[1.45]">CD Course Converter</h4>
+            <p class="!mb-3">Easily perform essential Compiler Design conversions — including left recursion
+              elimination, left factoring, and first & follow set calculations — all in one place. Save time, reduce
+              errors, and focus on learning.</p>
+            <a href="#" class="more hover !text-[#54a8c7] focus:!text-[#54a8c7] hover:!text-[#54a8c7]">Learn More</a>
+          </div>
+          <!--/column -->
+          <div
+            class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] !px-[15px] xl:!px-[20px] lg:!px-[20px] md:!px-[20px] !mt-[40px] max-w-full">
+            <div class="icon btn btn-block btn-lg btn-soft-aqua pointer-events-none !mb-6"> <i
+                class="uil uil-laptop-cloud before:content-['\ebb2']"></i> </div>
+            <h4 class="!text-[1rem] !leading-[1.45]">Quick Reference Handbook</h4>
+            <p class="!mb-3">Access a concise, well-structured C programming and compiler design handbook for instant
+              clarification of concepts.</p>
+            <a href="#" class="more hover !text-[#54a8c7] focus:!text-[#54a8c7] hover:!text-[#54a8c7]">Learn More</a>
+          </div>
+          <!--/column -->
+          <div
+            class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] !px-[15px] xl:!px-[20px] lg:!px-[20px] md:!px-[20px] !mt-[40px] max-w-full">
+            <div class="icon btn btn-block btn-lg btn-soft-aqua pointer-events-none !mb-6"> <i
+                class="uil uil-phone-volume before:content-['\ec50']"></i> </div>
+            <h4 class="!text-[1rem] !leading-[1.45]">All-in-One Platform</h4>
+            <p class="!mb-3">Get everything you need — compiler, converter, and handbook — in one easy-to-use website.
+            </p>
+            <a href="#" class="more hover !text-[#54a8c7] focus:!text-[#54a8c7] hover:!text-[#54a8c7]">Learn More</a>
+          </div>
+          <!--/column -->
+        </div>
+        <!--/.row -->
+        <div
+          class="flex flex-wrap mx-[-15px] max-sm:!mt-[-50px] !mt-[-80px] xl:mx-[-7.5px] lg:mx-[-7.5px] !mb-24 md:!mb-[8rem] items-center">
+          <div
+            class="md:w-8/12 lg:w-6/12 xl:w-6/12 w-full flex-[0_0_auto] xl:!px-[7.5px] lg:!px-[7.5px] !px-[15px] max-w-full !relative !mt-[80px]">
+            <div
+              class="shape bg-dot rellax !w-[7rem] !h-[12.5rem] absolute z-[1] opacity-50 !bg-[radial-gradient(#54a8c7_2px,transparent_2.5px)]"
+              data-rellax-speed="1" style="top: -2rem; left: -1.9rem;"></div>
+            <div class="shape !rounded-[.4rem] !bg-[#edf2fc] rellax xl:block lg:block md:block !absolute z-[1]"
+              data-rellax-speed="0" style="bottom: -1.8rem; right: -1.5rem; width: 85%; height: 90%; "></div>
+            <figure class="!rounded-[.4rem] relative z-[2]"><img class="!rounded-[.4rem]"
+                src="assets/imgg/compiler.png"  alt="image"></figure>
+          </div>
+          <!--/column -->
+          <div
+            class="lg:w-5/12 xl:w-4/12 xl:!ml-[8.33333333%] lg:!ml-[8.33333333%] w-full flex-[0_0_auto] xl:!px-[7.5px] lg:!px-[7.5px] !px-[15px] max-w-full !mt-[80px]">
+            <h2
+              class="!text-[0.8rem] uppercase inline-flex !leading-[1.35] text-line relative align-top !pl-[1.4rem] !tracking-[0.02rem] before:content-[''] before:absolute before:inline-block before:translate-y-[-60%] before:w-3 before:h-[0.05rem] before:left-0 before:top-2/4 before:bg-[#54a8c7] !text-[#54a8c7]  !mb-3">
+              How Compiler Works?</h2>
+            <h3 class="!text-[calc(1.315rem_+_0.78vw)] font-bold xl:!text-[1.9rem] !leading-[1.25] !mb-7">How to Use the
+              C programming Compiler</h3>
+            <div class="flex flex-row !mb-6">
+              <div>
+                <span class="icon btn btn-block btn-soft-aqua pointer-events-none !mr-5"><span
+                    class="number !text-[0.9rem]">1</span></span>
+              </div>
+              <div>
+                <h4 class="!mb-1 !text-[1rem] !leading-[1.45]">Write Your Code</h4>
+                <p class="!mb-0">Type your C program into the editor provided on the website.</p>
+              </div>
+            </div>
+            <div class="flex flex-row !mb-6">
+              <div>
+                <span class="icon btn btn-block btn-soft-aqua pointer-events-none !mr-5"><span
+                    class="number !text-[0.9rem]">2</span></span>
+              </div>
+              <div>
+                <h4 class="!mb-1 !text-[1rem] !leading-[1.45]">Compile & Run</h4>
+                <p class="!mb-0">Click the "Run" button to compile your code and execute it instantly.</p>
+              </div>
+            </div>
+            <div class="flex flex-row">
+              <div>
+                <span class="icon btn btn-block btn-soft-aqua pointer-events-none !mr-5"><span
+                    class="number !text-[0.9rem]">3</span></span>
+              </div>
+              <div>
+                <h4 class="!mb-1 !text-[1rem] !leading-[1.45]">View Output</h4>
+                <p class="!mb-0">Check the output panel for results, errors, or debugging messages.</p>
+              </div>
+            </div>
+          </div>
+          <!--/column -->
+        </div>
+        <!--/.row -->
+        <div
+          class="flex flex-wrap mx-[-15px] max-sm:!mt-[-50px] !mt-[-80px] xl:mx-[-7.5px] lg:mx-[-7.5px] items-center">
+          <div
+            class="md:w-8/12 lg:w-6/12 xl:w-6/12 w-full flex-[0_0_auto] !px-[15px] !mt-[50px] xl:!mt-[80px] lg:!mt-[80px] md:!mt-[80px] sm:!mt-[80px] xl:!px-[7.5px] lg:!px-[7.5px] max-w-full xl:!ml-[8.33333333%] lg:!ml-[8.33333333%] xl:!order-2 lg:!order-2 !relative">
+            <div class="shape !rounded-[50%] bg-line aqua rellax !w-[8rem] !h-[8rem] !absolute z-[1] opacity-50"
+              data-rellax-speed="1" style="top: -2rem; right: -1.9rem;"></div>
+            <div class="shape rounded !bg-[#edf2fc] rellax xl:block lg:block md:block absolute z-[1]"
+              data-rellax-speed="0" style="bottom: -1.8rem; left: -1.5rem; width: 85%; height: 90%; "></div>
+            <figure class="rounded-[0.4rem] relative z-[2]"><img class="rounded-[.4rem]"
+                src="assets/imgg/convert.png"  alt="convert image"></figure>
+          </div>
+          <!--/column -->
+          <div
+            class="xl:w-5/12 lg:w-5/12 w-full flex-[0_0_auto] !px-[15px] !mt-[50px] xl:!mt-[80px] lg:!mt-[80px] md:!mt-[80px] sm:!mt-[80px] xl:!px-[7.5px] lg:!px-[7.5px] max-w-full">
+            <h2
+              class="!text-[0.8rem] uppercase inline-flex !leading-[1.35] text-line relative align-top !pl-[1.4rem] !tracking-[0.02rem] before:content-[''] before:absolute before:inline-block before:translate-y-[-60%] before:w-3 before:h-[0.05rem] before:left-0 before:top-2/4 before:bg-[#54a8c7] !text-[#54a8c7]  !mb-3">
+              How Converter Works?</h2>
+            <h3 class="!text-[calc(1.315rem_+_0.78vw)] font-bold xl:!text-[1.9rem] !leading-[1.25] !mb-7">How to use the
+              Converter: Step-by-Step</h3>
+            <div class="flex flex-row !mb-6">
+              <div>
+                <span class="icon btn btn-block btn-soft-aqua pointer-events-none !mr-5"><span
+                    class="number !text-[0.9rem]">1</span></span>
+              </div>
+              <div>
+                <h4 class="!mb-1 !text-[1rem] !leading-[1.45]">Choose Operation</h4>
+                <p class="!mb-0">Start by selecting the transformation or analysis you need — for example, <b>Left
+                    Recursion Elimination</b> to remove recursive patterns, <b>Left Factoring</b> to simplify grammar
+                  choices, or <b>First & Follow</b> Set Calculation to aid parsing table construction.</p>
+              </div>
+            </div>
+            <div class="flex flex-row !mb-6">
+              <div>
+                <span class="icon btn btn-block btn-soft-aqua pointer-events-none !mr-5"><span
+                    class="number !text-[0.9rem]">2</span></span>
+              </div>
+              <div>
+                <h4 class="!mb-1 !text-[1rem] !leading-[1.45]">Enter Grammar</h4>
+                <p class="!mb-0">Type or paste your grammar rules into the input field, making sure they follow the
+                  required format for accurate processing.</p>
+              </div>
+            </div>
+            <div class="flex flex-row !mb-6">
+              <div>
+                <span class="icon btn btn-block btn-soft-aqua pointer-events-none !mr-5"><span
+                    class="number !text-[0.9rem]">3</span></span>
+              </div>
+              <div>
+                <h4 class="!mb-1 !text-[1rem] !leading-[1.45]">Generate & Use</h4>
+                <p class="!mb-0">Click <b>"Generate"</b> to instantly receive the transformed grammar or calculated
+                  sets. Review the results, then copy and apply them directly to your Compiler Design assignments,
+                  projects, or practice exercises.</p>
+              </div>
+            </div>
+
+            <!--/.accordion -->
+          </div>
+          <!--/column -->
+        </div>
+        <!--/.row -->
+      </div>
+      <!-- /.container -->
+    </section>
     
     <!-- /section -->
   </div>
