price and team section added

--- a/index.html
+++ b/index.html
@@ -372,11 +372,228 @@
       </div>
       <!-- /.container -->
     </section>
+
+    <section
+      class="wrapper !bg-[#ffffff]  angled upper-end relative border-0
+     before:top-[-4rem] before:content-[''] before:block before:absolute before:z-0 before:border-l-transparent before:border-r-[100vw] before:border-t-[4rem] before:border-y-transparent before:border-[#fefefe] before:border-0 before:border-solid before:right-0 after:content-[''] after:block after:absolute after:z-0 after:border-y-transparent after:border-[#fefefe] after:border-0 after:border-solid after:right-0">
+
+      <!-- /.container -->
+    </section>
+    <!-- /section -->
+    <section class="wrapper !bg-[#edf2fc]">
+
+      <!-- /.container -->
+    </section>
+    <!-- /section -->
+    <section
+      class="wrapper !bg-[#ffffff]  angled upper-end lower-start relative border-0
+     before:top-[-4rem] before:content-[''] before:block before:absolute before:z-0 before:border-l-transparent before:border-r-[100vw] before:border-t-[4rem] before:border-y-transparent before:border-[#fefefe] before:border-0 before:border-solid before:right-0 after:bottom-[-4rem] after:content-[''] after:block after:absolute after:z-0 after:border-l-[100vw] after:border-r-transparent after:border-b-[4rem] after:border-y-transparent after:border-[#fefefe] after:border-0 after:border-solid after:right-0">
+      <div class="container py-24 xl:!py-[8rem] lg:!py-[8rem] md:!py-[8rem] !relative">
+        <div
+          class="relative !mt-[-8rem] xl:!mt-[-17.5rem] lg:!mt-[-17.5rem] md:!mt-[-17.5rem] !mb-24 xl:!mb-[8rem] lg:!mb-[8rem] md:!mb-[8rem]">
+          <div class="card !shadow-[0_0.25rem_1.75rem_rgba(30,34,40,0.07)]">
+
+            <!--/.row -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /div -->
+        <div class="flex flex-wrap mx-[-15px] !mt-[-30px] !mb-24 xl:!mb-[8rem] lg:!mb-[8rem] md:!mb-[8rem]">
+          <div class="xl:w-4/12 lg:w-4/12 w-full flex-[0_0_auto] !px-[15px] max-w-full">
+            <h2
+              class="!text-[0.8rem] uppercase inline-flex !leading-[1.35] text-line relative align-top !pl-[1.4rem] !tracking-[0.02rem] before:content-[''] before:absolute before:inline-block before:translate-y-[-60%] before:w-3 before:h-[0.05rem] before:left-0 before:top-2/4 before:bg-[#54a8c7] !text-[#54a8c7] lg:!mt-32 xl:!mt-32 !mb-3">
+              Our Pricing</h2>
+            <h3 class="!text-[calc(1.315rem_+_0.78vw)] font-bold xl:!text-[1.9rem] !leading-[1.25] !mb-3">We offer great
+              and premium prices.</h3>
+            <p>Enjoy a <a href="#" class="hover !text-[#54a8c7]">free 30-day trial</a> and experience the full service.
+              No credit card required!</p>
+            <a href="#"
+              class="btn btn-aqua !text-white !bg-[#54a8c7] border-[#54a8c7] hover:text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] focus:text-white active:text-white active:bg-[#54a8c7] active:border-[#54a8c7] disabled:text-white disabled:bg-[#54a8c7] disabled:border-[#54a8c7] !text-[.85rem] rounded !mt-2">See
+              All Prices</a>
+          </div>
+          <!--/column -->
+          <div
+            class="xl:w-7/12 lg:w-7/12 w-full flex-[0_0_auto] !px-[15px] max-w-full xl:!ml-[8.33333333%] lg:!ml-[8.33333333%] pricing-wrapper !mt-[30px]">
+            <div class="flex flex-wrap items-center switcher xl:!justify-end lg:!justify-end">
+              <p class="!mb-0 !pr-[.75rem]">Monthly</p>
+              <div
+                class="pricing-switchers w-8 h-4 clear-both !text-center !relative bg-[rgba(30,34,40,0.07)] !box-content rounded-3xl border-[0.2rem] border-solid border-transparent">
+                <div
+                  class="pricing-switcher pricing-switcher-active cursor-pointer w-full float-left h-4 leading-4 !relative z-[888] transition-[0.3s] duration-[ease-in-out] uppercase !text-white">
+                </div>
+                <div
+                  class="pricing-switcher cursor-pointer w-full float-left h-4 leading-4 !relative z-[888] transition-[0.3s] duration-[ease-in-out] uppercase">
+                </div>
+                <div
+                  class="h-4 w-4 block absolute z-[555] transition-[0.3s] duration-[ease-in-out] m-0 rounded-[100%] border-[none] left-0 top-0 !bg-[rgba(84,168,199)] opacity-100 switcher-button">
+                </div>
+              </div>
+              <p class="!mb-0 !pl-3 !relative">Yearly <span class="!text-[#e2626b]">(Save 30%)</span></p>
+            </div>
+            <div class="flex flex-wrap mx-[-15px] !mt-[25px] !relative">
+              <div class="shape bg-dot aqua rellax !w-[6rem] !h-[8rem] absolute z-[1] opacity-50" data-rellax-speed="1"
+                style="bottom: -0.5rem; right: -1.6rem;"></div>
+              <div class="shape !rounded-[50%] !bg-[#edf2fc] rellax !w-[8rem] !h-[8rem] absolute z-[1]"
+                data-rellax-speed="1" style="top: -1rem; left: -2rem;"></div>
+              <div class="xl:w-6/12 lg:w-6/12 md:w-6/12 w-full flex-[0_0_auto] !px-[15px] max-w-full !mt-[30px]">
+                <div class="pricing card !shadow-[0_0.25rem_1.75rem_rgba(30,34,40,0.07)]">
+                  <div class="card-body pb-14">
+                    <div class="prices !text-[#343f52]">
+                      <div class="price price-show !justify-start"><span class="price-currency">$</span><span
+                          class="price-value">5</span> <span class="price-duration">mo</span></div>
+                      <div class="price price-hide price-hidden !justify-start"><span
+                          class="price-currency">$</span><span class="price-value">50</span> <span
+                          class="price-duration">yr</span></div>
+                    </div>
+                    <!--/.prices -->
+                    <h4 class="card-title !mt-2 text-[1rem] !leading-[1.45]">Premium Plan</h4>
+                    <ul class="pl-0 list-none bullet-bg bullet-soft-primary !mt-7 !mb-8">
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span><strong>Compiler</strong>
+                           (Run & Save Code) </span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span><strong>Basic Learning Access </strong>
+                          (C, DS) </span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span><strong>5 converter Tools</strong>
+                          </span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span>
+                          <strong>2 </strong>Projects/Month</span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-times bullet-soft-red absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center !bg-[#fae3e4] !text-[#e2626b] rounded-[100%] top-[0.2rem] before:content-['\ed3b'] before:align-middle before:table-cell"></i><span>
+                          7/24 <strong>Support</strong></span></li>
+                    </ul>
+                    <a href="#"
+                      class="btn btn-aqua !text-white !bg-[#54a8c7] border-[#54a8c7] hover:text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] focus:text-white active:text-white active:bg-[#54a8c7] active:border-[#54a8c7] disabled:text-white disabled:bg-[#54a8c7] disabled:border-[#54a8c7] !rounded-[.4rem] !text-[.85rem] hover:translate-y-[-0.15rem] hover:shadow-[0_0.25rem_0.75rem_rgba(30,34,40,0.15)]">Choose
+                      Plan</a>
+                  </div>
+                  <!--/.card-body -->
+                </div>
+                <!--/.pricing -->
+              </div>
+              <!--/column -->
+              <div
+                class="xl:w-6/12 lg:w-6/12 md:w-6/12 w-full flex-[0_0_auto] !px-[15px] max-w-full popular !mt-[30px]">
+                <div class="pricing card !shadow-[0_0.25rem_1.75rem_rgba(30,34,40,0.07)]">
+                  <div class="card-body pb-14">
+                    <div class="prices !text-[#343f52]">
+                      <div class="price price-show !justify-start"><span class="price-currency">$</span><span
+                          class="price-value">10</span> <span class="price-duration">mo</span></div>
+                      <div class="price price-hide price-hidden !justify-start"><span
+                          class="price-currency">$</span><span class="price-value">100</span> <span
+                          class="price-duration">yr</span></div>
+                    </div>
+                    <!--/.prices -->
+                    <h4 class="card-title !mt-2 text-[1rem] !leading-[1.45]">Premium Plan</h4>
+                    <ul class="pl-0 list-none bullet-bg bullet-soft-primary !mt-7 !mb-8">
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span>
+                           (Run & Save All Codes) </span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span><strong>All Learning Access </strong>
+                          </span></li>
+                          <li class="relative !pl-6 !mt-[0.35rem]"><span>(C, C++, OOP, Algo, CD)
+                          </span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span><strong>All converter Tools</strong>
+                          </span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span>
+                          <strong>4 </strong>Projects/Month</span></li>
+                      
+                          Weekly <strong>Reports</strong></span></li>
+                      <li class="relative !pl-6 !mt-[0.35rem]"><i
+                          class="uil uil-check absolute left-0 w-4 h-4 text-[0.8rem] leading-none !tracking-[normal] !text-center flex items-center justify-center bg-[#e0eff5] !text-[#54a8c7] rounded-[100%] top-[0.2rem] before:content-['\e9dd'] before:align-middle before:table-cell"></i><span>
+                          7/24 <strong>Support</strong></span></li>
+                    </ul>
+                    <a href="#"
+                      class="btn btn-aqua !text-white !bg-[#54a8c7] border-[#54a8c7] hover:text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] focus:text-white active:text-white active:bg-[#54a8c7] active:border-[#54a8c7] disabled:text-white disabled:bg-[#54a8c7] disabled:border-[#54a8c7] !rounded-[.4rem] !text-[.85rem] hover:translate-y-[-0.15rem] hover:shadow-[0_0.25rem_0.75rem_rgba(30,34,40,0.15)]">Choose
+                      Plan</a>
+                  </div>
+                  <!--/.card-body -->
+                </div>
+                <!--/.pricing -->
+              </div>
+              <!--/column -->
+            </div>
+            <!--/.row -->
+          </div>
+          <!--/column -->
+        </div>
+        <!--/.row -->
+        <div class="flex flex-wrap mx-[-15px] !mt-[-80px] xl:mx-[-7.5px] lg:mx-[-7.5px] items-center">
+          <div
+            class="md:w-8/12 lg:w-6/12 xl:w-6/12 w-full flex-[0_0_auto] !mt-[80px] xl:!px-[7.5px] lg:!px-[7.5px] !px-[15px] max-w-full !relative">
+            <div
+              class="shape bg-dot primary rellax !w-[7rem] !h-[12.5rem] absolute z-[1] opacity-50 bg-[radial-gradient(#3f78e0_2px,transparent_2.5px)]"
+              data-rellax-speed="1" style="top: -2rem; left: -1.9rem;"></div>
+            <div class="shape !rounded-[.4rem] !bg-[#edf2fc] rellax xl:block lg:block md:block !absolute z-[1]"
+              data-rellax-speed="0" style="bottom: -1.8rem; right: -1.5rem; width: 85%; height: 90%; "></div>
+            <figure class="rounded-[0.4rem] relative z-[2]"><img class="rounded-[.4rem]" src="assets/imgg/team.jpg"
+                 alt="image">
+            </figure>
+          </div>
+          <!--/column -->
+          <div
+            class="lg:w-5/12 xl:w-4/12 xl:!ml-[8.33333333%] lg:!ml-[8.33333333%] w-full flex-[0_0_auto] !mt-[80px] xl:!px-[7.5px] lg:!px-[7.5px] !px-[15px] max-w-full">
+            <h2
+              class="!text-[0.8rem] uppercase inline-flex !leading-[1.35] text-line relative align-top !pl-[1.4rem] !tracking-[0.02rem] before:content-[''] before:absolute before:inline-block before:translate-y-[-60%] before:w-3 before:h-[0.05rem] before:left-0 before:top-2/4 before:bg-[#54a8c7] !text-[#54a8c7]  !mb-3">
+              Get In Touch</h2>
+            <h2 class="!text-[calc(1.315rem_+_0.78vw)] font-bold xl:!text-[1.9rem] !leading-[1.25] !mb-8">Meet Our Team
+            </h2>
+            <div class="flex flex-row">
+
+              <div>
+                <h5 class="!mb-1 !text-[0.95rem] !leading-[1.5]">Abdey Rabby - Backend Developer</h5>
+                <address class=" not-italic !leading-[inherit] !mb-4">Focus: Compiler Logic, Backend Architecture, API
+                  Development
+
+                  <br class="hidden xl:block lg:block md:block">Email: abdeyrabby404@gmail.com
+                </address>
+              </div>
+            </div>
+            <div class="flex flex-row">
+              <!-- <div>
+                <div
+                  class="icon !text-[#54a8c7]  xl:!text-[1.4rem] !text-[calc(1.265rem_+_0.18vw)] !mr-6 !mt-[-0.25rem]">
+                   </div>
+              </div> -->
+              <div>
+                <h5 class="!mb-1 !text-[0.95rem] !leading-[1.5]">Jannatun Naima - Frontend Developer</h5>
+                <address class=" not-italic !leading-[inherit] !mb-4"><b class="text-black">Focus:</b> UI/UX, Frontend Development, Performance Optimization
+                  Development
+
+                  <br class="hidden xl:block lg:block md:block">Email: jannatunnaima695@gmail.com
+                </address>
+              </div>
+            </div>
+            <!-- <div class="flex flex-row">
+              <div>
+                <div
+                  class="icon !text-[#54a8c7]  xl:!text-[1.4rem] !text-[calc(1.265rem_+_0.18vw)] !mr-6 !mt-[-0.25rem]">
+                  <i class="uil uil-envelope before:content-['\eac8']"></i> </div>
+              </div>
+              <div>
+                <h5 class="!mb-1 !text-[0.95rem] !leading-[1.5]">E-mail</h5>
+                <p class="!mb-0"><a href="mailto:sandbox@email.com" class="!text-[#60697b]">sandbox@email.com</a></p>
+              </div>
+            </div> -->
+          </div>
+          <!--/column -->
+        </div>
+        <!--/.row -->
+      </div>
+      <!-- /.container -->
+    </section>
     
     <!-- /section -->
   </div>
   <!-- Main section end  -->
 
+
+
+  
   <!-- progress wrapper -->
   <div
     class="progress-wrap fixed w-[2.3rem] h-[2.3rem] cursor-pointer block shadow-[inset_0_0_0_0.1rem_rgba(128,130,134,0.25)] z-[1010] opacity-0 invisible translate-y-3 transition-all duration-[0.2s] ease-[linear,margin-right] delay-[0s] rounded-[100%] right-6 bottom-6 motion-reduce:transition-none after:absolute after:content-['\e951'] after:text-center after:leading-[2.3rem] after:text-[1.2rem] after:!text-[#54a8c7] after:h-[2.3rem] after:w-[2.3rem] after:cursor-pointer after:block after:z-[1] after:transition-all after:duration-[0.2s] after:ease-linear after:left-0 after:top-0 motion-reduce:after:transition-none after:font-Unicons">
