--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description"
     content="CompilerX is a modern online C Compiler, Converter, and Handbook — all in one place. Write, compile, and run C programs instantly in your browser without installing anything. Enjoy fast performance, code saving, custom input, syntax highlighting, and downloadable outputs. The built-in Converter helps solve common Compiler Design course problems like left recursion elimination, left factoring, and parsing table construction. The included Handbook guides learners step-by-step through C programming and compiler design concepts.">
   <meta name="keywords"
-    content="Tailwind CSS, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup">
+    content="Tailwind CSS, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup,">
   <meta name="author" content="elemis">
   <title>CompilerX</title>
   <!-- google fonts -->
@@ -42,7 +42,6 @@
 </head>
 
 <body class="font-THICCCBOI text-[.85rem]">
-  <!-- Main section  -->
   <div class="grow shrink-0">
     <header class="relative wrapper  bg-[#262b32] opacity-100 ">
       <nav class="navbar navbar-expand-lg center-nav transparent navbar-dark">
@@ -170,7 +169,7 @@
       </div>
       <!-- /.container -->
     </section>
-
+    <!-- /section -->
     <section class="wrapper !bg-[#ffffff]">
       <div class="container pt-36 xl:pt-[12.5rem] lg:pt-[12.5rem] md:pt-[12.5rem] pb-24 xl:pb-32 lg:pb-32 md:pb-32">
         <div class="flex flex-wrap mx-[-15px]">
@@ -348,7 +347,7 @@
       </div>
       <!-- /.container -->
     </section>
-
+    <!-- /section -->
     <section
       class="wrapper image-wrapper bg-image bg-overlay !bg-fixed bg-no-repeat bg-[center_center] bg-cover relative z-0 before:content-[''] before:block before:absolute before:z-[1] before:w-full before:h-full before:left-0 before:top-0 before:bg-[rgba(30,34,40,.5)]"
       data-image-src="assets/imgg/bg1.jpg">
@@ -372,7 +371,7 @@
       </div>
       <!-- /.container -->
     </section>
-
+    <!-- /section -->
     <section
       class="wrapper !bg-[#ffffff]  angled upper-end relative border-0
      before:top-[-4rem] before:content-[''] before:block before:absolute before:z-0 before:border-l-transparent before:border-r-[100vw] before:border-t-[4rem] before:border-y-transparent before:border-[#fefefe] before:border-0 before:border-solid before:right-0 after:content-[''] after:block after:absolute after:z-0 after:border-y-transparent after:border-[#fefefe] after:border-0 after:border-solid after:right-0">
@@ -586,11 +585,9 @@
       </div>
       <!-- /.container -->
     </section>
-    
     <!-- /section -->
   </div>
-  <!-- Main section end  -->
-
+  <!-- /.content-wrapper -->
   <footer class=" bg-[#21262c] opacity-100  !text-[#cacaca]">
     <div class="container pt-28 xl:pt-36 lg:pt-36 md:pt-36 pb-16 xl:pb-20 lg:pb-20 md:pb-20">
       <div class="flex flex-wrap mx-[-15px] !mt-[-30px] xl:!mt-0 lg:!mt-0">
@@ -690,9 +687,6 @@
     </div>
     <!-- /.container -->
   </footer>
-
-
-
   <!-- progress wrapper -->
   <div
     class="progress-wrap fixed w-[2.3rem] h-[2.3rem] cursor-pointer block shadow-[inset_0_0_0_0.1rem_rgba(128,130,134,0.25)] z-[1010] opacity-0 invisible translate-y-3 transition-all duration-[0.2s] ease-[linear,margin-right] delay-[0s] rounded-[100%] right-6 bottom-6 motion-reduce:transition-none after:absolute after:content-['\e951'] after:text-center after:leading-[2.3rem] after:text-[1.2rem] after:!text-[#54a8c7] after:h-[2.3rem] after:w-[2.3rem] after:cursor-pointer after:block after:z-[1] after:transition-all after:duration-[0.2s] after:ease-linear after:left-0 after:top-0 motion-reduce:after:transition-none after:font-Unicons">
