--- a/index.html
+++ b/index.html
@@ -66,13 +66,9 @@
                 
                 <li class="nav-item dropdown"><a class="nav-link active" href="index.html">Home</a></li>
                 <li class="nav-item dropdown"><a class="nav-link " href="c-compiler.html">Compiler</a></li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#"
-                    data-bs-toggle="dropdown">Convert-CD</a>
-
-                </li>
+                <li class="nav-item dropdown"><a class="nav-link" href="converter.html">Converter</a></li>
                 <li class="nav-item dropdown dropdown-mega">
-                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#" data-bs-toggle="dropdown">Contact</a>
+                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#" data-bs-toggle="dropdown">About</a>
 
                   <!--/.dropdown-menu -->
                 </li>
